MultiMaze game implemented and bugs squashed. Next step might be making GateRoom just a decorated Maze.Room instead of a subclass of Maze.Room